additional test cases, webm check